    http://<hostname>/forge/ with unmodified packages.

 -- Roland Mas <lolando@debian.org>  Wed, 29 Apr 2009 15:21:31 +0200

gforge (4.8-1+scmrefactor) UNRELEASED; urgency=low

  * Stop shipping cvs_dump.pl and cvs_update.pl now that their function is
    fulfilled by the plugin hook.
  * Ditto for svn_dump.pl and svn_update.pl.

 -- Roland Mas <lolando@debian.org>  Sun, 19 Jul 2009 11:38:11 +0200

gforge (4.8-3) unstable; urgency=low

  * New upstream snapshot as of SVN r7960.

 -- Roland Mas <lolando@debian.org>  Thu, 27 Aug 2009 10:47:54 +0200

gforge (4.8-2) unstable; urgency=low

  * Upload to Debian unstable, with a new upstream snapshot as of SVN
    r7945.

 -- Roland Mas <lolando@debian.org>  Thu, 06 Aug 2009 11:25:16 +0200

gforge (4.8-1) experimental; urgency=low

  * New upstream release.

 -- Roland Mas <lolando@debian.org>  Fri, 12 Jun 2009 13:44:57 +0200

gforge (4.8~rc2-1) experimental; urgency=low

  * New upstream release candidate.
  * Fixed path to install-svn.sh in -plugin-scmsvn's postinst and prerm.

 -- Roland Mas <lolando@debian.org>  Mon, 18 May 2009 11:24:58 +0200

gforge (4.8~rc1-2) experimental; urgency=low

  * New upstream snapshot.
  * install-chroot.sh: do not fail if device nodes can't be created (such
    as when operating in a vserver).
  * Fixed crontab syntax for -db-postgresql (cron doesn't interpolate the
    user column itself).

 -- Roland Mas <lolando@debian.org>  Mon, 04 May 2009 22:16:11 +0200

gforge (4.8~rc1-1) experimental; urgency=low

  [ Christian Bayle ]
  * Removed all files from /usr/lib/gforge and put them in /usr/share/gforge
  * cron scripts ar now in /usr/share/gforge/cronjobs
  * Now generate *.cron.d *.dirs *.install from cron.d/dirs/install dirs
  * Use dh_install instead of copy in rules

  [ Roland Mas ]
  * Fixed a bunch of lintian warnings.
  * Added logrotate configuration file for vhosts access logs.
  * New upstream release candidate.
