@@ -87,6 +87,8 @@ gforge/debian/dsf-po/fi.po -text
 gforge/debian/dsf-po/gl.po -text
 gforge/debian/dsf-po/pt.po -text
 gforge/debian/dsf-po/ru.po -text
+gforge/debian/gforge-plugin-scmcpold.postinst -text
+gforge/debian/gforge-plugin-scmcpold.prerm -text
 gforge/debian/patches/disable-dav.dpatch -text
 gforge/debian/patches/use-snoopy-from-distro.dpatch -text
 gforge/debian/po/README -text
@@ -173,6 +175,7 @@ gforge/packaging/dirs/plugin-globalsearch -text
 gforge/packaging/dirs/plugin-mediawiki -text
 gforge/packaging/dirs/plugin-projectlabels -text
 gforge/packaging/dirs/plugin-scmbzr -text
+gforge/packaging/dirs/plugin-scmcpold -text
 gforge/packaging/dirs/plugin-scmcvs -text
 gforge/packaging/dirs/plugin-scmsvn -text
 gforge/packaging/dirs/web-apache2 -text
@@ -189,6 +192,7 @@ gforge/packaging/install/plugin-globalsearch -text
 gforge/packaging/install/plugin-mediawiki -text
 gforge/packaging/install/plugin-projectlabels -text
 gforge/packaging/install/plugin-scmbzr -text
+gforge/packaging/install/plugin-scmcpold -text
 gforge/packaging/install/plugin-scmcvs -text
 gforge/packaging/install/plugin-scmsvn -text
 gforge/packaging/install/shell-postgresql -text
@@ -904,6 +908,9 @@ gforge/plugins/quota_management/www/quota_project.php -text
 gforge/plugins/scmbzr/common/BzrPlugin.class.php -text
 gforge/plugins/scmbzr/common/scmbzr-init.php -text
 gforge/plugins/scmbzr/etc/plugins/scmbzr/config.php -text
+gforge/plugins/scmcpold/common/CpoldPlugin.class.php -text
+gforge/plugins/scmcpold/common/scmcpold-init.php -text
+gforge/plugins/scmcpold/etc/plugins/scmcpold/config.php -text
 gforge/plugins/scmcvs/cron.d/fusionforge-plugin-scmcvs -text
 gforge/plugins/scmcvs/fusionforge-plugin-scmcvs.spec -text
 gforge/plugins/scmsvn/cron.d/fusionforge-plugin-scmsvn -text
