@@ -1,0 +1,7 @@
+etc/gforge/httpd.d
+etc/gforge/plugins/scmcpold
+usr/share/gforge/plugins/scmcpold/bin
+usr/share/gforge/plugins/scmcpold/cronjobs
+usr/share/gforge/plugins/scmcpold/common
+var/lib/gforge/chroot/cpoldroot
+var/lib/gforge/dumps
