@@ -1,0 +1,12 @@
+<?php
+ 
+$default_cpold_server = $GLOBALS['sys_scm_host'];
+$cpold_root = '/var/lib/gforge/chroot/scmrepos/cpold';
+$enabled_by_default = false;
+
+// Local Variables:
+// mode: php
+// c-file-style: "bsd"
+// End:
+ 
+?>
